Updated social links and readme

--- a/SRC/pages/education.html
+++ b/SRC/pages/education.html
@@ -85,11 +85,12 @@
                 &copy; 2026 • D. Kimathi • All Rights Reserved
             </div>
             <div class="right">
-                <div class="social"><a href="https://www.facebook.com/ritoncharlox" target="_blank"><i
+                
+                <div class="social"><a href="https://www.linkedin.com/in/david-kimathi" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
+                <div class="social"><a href="https://github.com/LosBandidox" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+                <div class="social"><a href="https://www.facebook.com/David Kimathi" target="_blank"><i
                             class="fa-brands fa-facebook"></i></a></div>
-                <div class="social"><a href="https://www.instagram.com/ritoncharlox" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
-                <div class="social"><a href="https://www.linkedin.com/in/ritoncharlox" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
-                <div class="social"><a href="https://github.com/ritoncharlox" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+                <div class="social"><a href="https://www.instagram.com/los_bandidox" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
             </div>
         </footer>
     </div>
